log
Thu May 12 00:23:39 UTC 2022: 
 tests:  0|5
total_score: 0/70
bbaa8ee
Thu May 12 02:53:52 UTC 2022: 
 sudoku.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
In file included from test.c:5:0:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:67:13: error: implicit declaration of function ‘push_back’; did you mean ‘pushBack’? [-Werror=implicit-function-declaration]
             push_back(list, adj_n);
             ^~~~~~~~~
             pushBack
cc1: all warnings being treated as errors
Compilation failed
65969d3
Thu May 12 02:54:40 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
2a3d291
Thu May 12 02:59:36 UTC 2022: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
00c469d
Thu May 12 03:00:00 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:64:12: error: ‘new_move’ undeclared (first use in this function); did you mean ‘memmove’?
            new_move += 1;
            ^~~~~~~~
            memmove
sudoku.c:64:12: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
4933c0b
Thu May 12 03:00:09 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
1f51d23
Thu May 12 03:00:26 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
bbde90e
Thu May 12 03:11:40 UTC 2022: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|5
total_score: 0/70
aabe64f
